gcc/testsuite/g++.dg/expr/lval3.C
@@ -1,0 +1,9 @@
+// i++ is never an lvalue
+void
+f()
+{
+  bool i = 0;
+  i++ = 3; // { dg-error "" }
+}
+
+
